Update kafka.md